--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Crypto Currency Viewer</string>
+    <string name="ccy1_ccy2">CCY1 / CCY2</string>
+    <string name="exchange_value">exchange value</string>
+    <string name="last_update">last update</string>
 </resources>
